--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.2.3",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "google-sign-in": "^3.0.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
