--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "google-sign-in": "^3.0.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-keyboard-aware-view": "^0.0.14",
     "react-native-reanimated": "~2.9.1",
@@ -27,7 +27,10 @@
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "typescript": "^4.6.3",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
