--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.2.3",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "google-sign-in": "^3.0.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hooks-global-state": "^2.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-keyboard-aware-view": "^0.0.14",
@@ -28,9 +31,7 @@
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "typescript": "^4.6.3",
-    "@types/react": "~18.0.0",
-    "@types/react-native": "~0.69.1"
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
