--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.17.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
@@ -24,17 +23,22 @@
     "react-hooks-global-state": "^2.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
-    "react-native-keyboard-aware-view": "^0.0.14",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@expo/webpack-config": "^0.16.27",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-middleware": "^5.3.3",
+    "webpack-dev-server": "^3.11.3",
+    "webpack-hot-middleware": "^2.25.2"
   },
   "private": true
 }
