--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "typescript": "^4.6.3",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+    "@react-native-community/datetimepicker": "6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
