--- a/app.json
+++ b/app.json
@@ -28,6 +28,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [[
+      "with-rn-bluetooth-classic",
+      {
+        "peripheralUsageDescription": "Allow myDevice to check bluetooth peripheral info",
+        "alwaysUsageDescription": "Allow myDevice to always use bluetooth info",
+        "protocols": [
+          "com.myCompany.p1",
+          "com.myCompany.p2"
+        ]
+      }
+    ]]
   }
 }
