--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "github:react-native-async-storage/async-storage",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
@@ -17,6 +18,8 @@
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "expo": "~46.0.9",
+    "expo-bluetooth": "^0.0.0",
+    "expo-speech": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.13.0",
     "google-sign-in": "^3.0.3",
@@ -24,16 +27,21 @@
     "react-dom": "18.0.0",
     "react-hooks-global-state": "^2.0.0",
     "react-native": "0.69.6",
+    "react-native-bluetooth-classic": "^1.60.0-rc.25",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-google-fit": "^0.19.1",
+    "react-native-healthkit": "^0.0.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-tts": "^4.1.0",
     "react-native-web": "~0.18.7",
+    "react-native-web-bluetooth": "^0.0.0-alpha.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "typescript": "^4.6.3",
     "webpack": "^4.46.0",
-    "@react-native-community/datetimepicker": "6.2.0"
+    "with-rn-bluetooth-classic": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
