--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-google-fit": "^0.19.1",
     "react-native-healthkit": "^0.0.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
