--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hooks-global-state": "^2.0.0",
     "react-native": "0.69.6",
     "react-native-bluetooth-classic": "^1.60.0-rc.25",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-google-fit": "^0.19.1",
     "react-native-healthkit": "^0.0.1",
@@ -35,14 +36,17 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "^9.13.3",
     "react-native-tts": "^4.1.0",
     "react-native-web": "~0.18.7",
     "react-native-web-bluetooth": "^0.0.0-alpha.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "typescript": "^4.6.3",
+    "victory-native": "^36.6.8",
     "webpack": "^4.46.0",
-    "with-rn-bluetooth-classic": "^1.0.5"
+    "with-rn-bluetooth-classic": "^1.0.5",
+    "expo-updates": "~0.14.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
