--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-bluetooth": "^0.0.0",
     "expo-speech": "~10.3.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.7",
     "firebase": "^9.13.0",
     "google-sign-in": "^3.0.3",
     "react": "18.0.0",
@@ -31,6 +32,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-google-fit": "^0.19.1",
+    "react-native-health": "^1.14.0",
     "react-native-healthkit": "^0.0.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~2.9.1",
@@ -45,8 +47,7 @@
     "typescript": "^4.6.3",
     "victory-native": "^36.6.8",
     "webpack": "^4.46.0",
-    "with-rn-bluetooth-classic": "^1.0.5",
-    "expo-updates": "~0.14.7"
+    "with-rn-bluetooth-classic": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
