--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "my",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -20,6 +19,7 @@
     "expo": "~46.0.9",
     "expo-bluetooth": "^0.0.0",
     "expo-speech": "~10.3.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.7",
     "firebase": "^9.13.0",
