--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-native-health": "^1.14.0",
     "react-native-healthkit": "^0.0.1",
     "react-native-push-notification": "^8.1.1",
-    "react-native-reanimated": "~2.9.1",
+    "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "^9.13.3",
