--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-dom": "18.0.0",
     "react-hooks-global-state": "^2.0.0",
     "react-native": "0.69.6",
+    "react-native-ble-manager": "^9.0.0",
+    "react-native-ble-plx": "^2.0.3",
     "react-native-bluetooth-classic": "^1.60.0-rc.25",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.5.0",
