--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.0.0",
     "react-hooks-global-state": "^2.0.0",
     "react-native": "0.69.6",
+    "react-native-ble-manager": "^9.0.0",
     "react-native-bluetooth-classic": "^1.60.0-rc.25",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.5.0",
@@ -44,6 +45,7 @@
     "react-native-web-bluetooth": "^0.0.0-alpha.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
+    "rn-apple-healthkit": "^0.8.0",
     "typescript": "^4.6.3",
     "victory-native": "^36.6.8",
     "webpack": "^4.46.0",
