--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "typescript": "^4.6.3",
     "victory-native": "^36.6.8",
     "webpack": "^4.46.0",
-    "with-rn-bluetooth-classic": "^1.0.5"
+    "with-rn-bluetooth-classic": "^1.0.5",
+    "expo-av": "~12.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
