--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "expo": "~46.0.9",
+    "expo-av": "~12.0.4",
     "expo-bluetooth": "^0.0.0",
     "expo-speech": "~10.3.0",
     "expo-status-bar": "~1.4.0",
@@ -46,11 +47,11 @@
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "rn-apple-healthkit": "^0.8.0",
+    "rn-healthkit": "^0.0.2",
     "typescript": "^4.6.3",
     "victory-native": "^36.6.8",
     "webpack": "^4.46.0",
-    "with-rn-bluetooth-classic": "^1.0.5",
-    "expo-av": "~12.0.4"
+    "with-rn-bluetooth-classic": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
