--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "typescript": "^4.6.3",
     "victory-native": "^36.6.8",
     "webpack": "^4.46.0",
-    "with-rn-bluetooth-classic": "^1.0.5"
+    "with-rn-bluetooth-classic": "^1.0.5",
+    "expo-dev-client": "~1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
