--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "0.69.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-google-fit": "^0.19.1",
     "react-native-health": "^1.14.0",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~2.9.1",
