--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-google-fit": "^0.19.1",
     "react-native-health": "^1.14.0",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
