--- a/ios/AnxietyBuddy.xcodeproj/xcshareddata/xcschemes/AntiAnxiety.xcscheme
+++ b/ios/AnxietyBuddy.xcodeproj/xcshareddata/xcschemes/AntiAnxiety.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "AntiAnxiety.app"
-               BlueprintName = "AntiAnxiety"
-               ReferencedContainer = "container:AntiAnxiety.xcodeproj">
+               BuildableName = "AnxietyBuddy.app"
+               BlueprintName = "AnxietyBuddy"
+               ReferencedContainer = "container:AnxietyBuddy.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "AntiAnxietyTests.xctest"
                BlueprintName = "AntiAnxietyTests"
-               ReferencedContainer = "container:AntiAnxiety.xcodeproj">
+               ReferencedContainer = "container:AnxietyBuddy.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AntiAnxiety.app"
-            BlueprintName = "AntiAnxiety"
-            ReferencedContainer = "container:AntiAnxiety.xcodeproj">
+            BuildableName = "AnxietyBuddy.app"
+            BlueprintName = "AnxietyBuddy"
+            ReferencedContainer = "container:AnxietyBuddy.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AntiAnxiety.app"
-            BlueprintName = "AntiAnxiety"
-            ReferencedContainer = "container:AntiAnxiety.xcodeproj">
+            BuildableName = "AnxietyBuddy.app"
+            BlueprintName = "AnxietyBuddy"
+            ReferencedContainer = "container:AnxietyBuddy.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
