--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "github:react-native-async-storage/async-storage",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
@@ -18,7 +17,11 @@
     "@types/react-native": "~0.69.1",
     "expo": "~46.0.9",
     "expo-av": "~12.0.4",
+    "expo-constants": "~13.2.4",
     "expo-dev-client": "~1.3.1",
+    "expo-device": "~4.3.0",
+    "expo-notifications": "~0.16.1",
+    "expo-permissions": "~13.2.0",
     "expo-speech": "~10.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
@@ -28,7 +31,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hooks-global-state": "^2.0.0",
-    "react-native": "0.69.6",
+    "react-native": "0.69.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-google-fit": "^0.19.1",
@@ -37,7 +40,7 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-svg": "^9.13.3",
+    "react-native-svg": "^13.12.0",
     "react-native-tts": "^4.1.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
