--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
@@ -21,7 +22,6 @@
     "expo-dev-client": "~1.3.1",
     "expo-device": "~4.3.0",
     "expo-notifications": "~0.16.1",
-    "expo-permissions": "~13.2.0",
     "expo-speech": "~10.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
