Updated cognitive training. Made some fixes in multiple components

--- a/ios/AntiAnxiety/Info.plist
+++ b/ios/AntiAnxiety/Info.plist
@@ -70,7 +70,7 @@
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Allow $(PRODUCT_NAME) to access your microphone</string>
 	<key>UILaunchStoryboardName</key>
-	<string>SplashScreen</string>
+	<string>Launch Screen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
