--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/pacifico": "^0.2.3",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -33,6 +34,7 @@
     "react-hooks-global-state": "^2.0.0",
     "react-native": "0.69.9",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-copilot": "^3.2.1",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-google-fit": "^0.19.1",
     "react-native-health": "^1.14.0",
@@ -41,7 +43,7 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-svg": "^13.12.0",
+    "react-native-svg": "^13.12.0",    
     "react-native-tts": "^4.1.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
