--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/pacifico": "^0.2.3",
+    "@os-team/i18next-react-native-language-detector": "^1.0.34",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -30,7 +31,6 @@
     "firebase": "^9.13.0",
     "google-sign-in": "^3.0.3",
     "i18next": "^23.12.2",
-    "i18next-browser-languagedetector": "^8.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hooks-global-state": "^2.0.0",
