--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/pacifico": "^0.2.3",
+    "@os-team/i18next-react-native-language-detector": "^1.0.34",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -29,9 +30,11 @@
     "expo-updates": "~0.14.7",
     "firebase": "^9.13.0",
     "google-sign-in": "^3.0.3",
+    "i18next": "^23.12.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hooks-global-state": "^2.0.0",
+    "react-i18next": "^15.0.0",
     "react-native": "0.69.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-copilot": "^3.2.1",
@@ -43,7 +46,7 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-svg": "^13.12.0",    
+    "react-native-svg": "^13.12.0",
     "react-native-tts": "^4.1.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
