--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/pacifico": "^0.2.3",
-    "@os-team/i18next-react-native-language-detector": "^1.0.34",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@os-team/i18next-react-native-language-detector": "1.0.30",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
@@ -30,11 +30,12 @@
     "expo-updates": "~0.14.7",
     "firebase": "^9.13.0",
     "google-sign-in": "^3.0.3",
-    "i18next": "^23.12.2",
+    "i18next": "23.7.15",
+    "intl-pluralrules": "2.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hooks-global-state": "^2.0.0",
-    "react-i18next": "^15.0.0",
+    "react-i18next": "14.0.0",
     "react-native": "0.69.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-copilot": "^3.2.1",
