VoiceRecord screen created and added to navigation

--- a/app.json
+++ b/app.json
@@ -6,6 +6,10 @@
     "orientation": "default",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "permissions": [
+      "CAMERA", 
+      "AUDIO_RECORDING"
+    ],
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
